# vibeto_spec

./: .env.example  .gitignore  README.md  pyproject.toml  start.bat
api/: main.py
api/routes/: chat.py
frontend/: app.py
graph/: builder.py  edges.py  llm_factory.py  state.py
graph/nodes/: completeness.py  domain_translator.py  interviewer.py  quality_reviewer.py  spec_generator.py
prompts/: domain_translator_system.md  interviewer_system.md  quality_reviewer_system.md  spec_generator_system.md
schemas/: domain.py  interview.py  spec.py
tests/: conftest.py  test_completeness.py  test_interviewer.py
